objects/Etablissement__c.object
<CustomObject>
    <fields>
        <fullName>Code_D_partement__c</fullName>
        <label>Code Département</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Etablissement__c</fullName>
        <externalId>true</externalId>
        <label>Code Etablissement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Pays__c</fullName>
        <label>Code Pays</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TECH_External_Id__c</fullName>
        <description>Champ technique qui contient la copie de l&apos;Id de l&apos;enregistrement 
en production</description>
        <externalId>true</externalId>
        <label>TECH_External_Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ville_Etablissement__c</fullName>
        <label>Ville Etablissement</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Etablissement</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tout</label>
    </listViews>
    <nameField>
        <label>Nom de Etablissement</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Etablissement</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>